crates/tree-sitter/grammar.js
    source_file: ($) =>
      repeat(
        choice(
          $.config_decl, // Declaration of CONFIGURATION and RESOURCE
          $.prog_decl, // Declaration of PROGRAM
          $.namespace_decl, // Declaration of NAMESPACE (including all other declarations)
          // Global POUs declarations
          $.data_type_decl,
          $.func_decl,
          $.fb_decl,
          $.class_decl,
          $.interface_decl,
          // Global using
          $.using_directive,
          //$.ERR_invalid_pou_keyword,
        ),
      ),

    // Other - Errors

    // Pou declaration errors
    // Note that this error is rather consuming and i'm unsure if it should be kept
    constant: ($) =>
      choice($.numeric_literal, $.char_literal, $.time_literal, $.bool_literal),

    numeric_literal: ($) => choice($.real_literal, $.int_literal),

    int_literal: ($) =>
      seq(
        optional(seq(field("kind", $.int_kind), "#")),
        field(
          "int",
          choice($.signed_int, $.binary_int, $.octal_int, $.hex_int),
        ),
      ),

    unsigned_int: ($) => token(/[0-9][0-9_]*/),

    // token() prevents whitespace between sign and digits:
    // -42 is a signed literal, - 42 is unary minus on 42.
    // No precedence needed - token boundary disambiguates.
    signed_int: ($) =>
      choice(
        $._explicit_signed_int,
        $.unsigned_int,
      ),

    _explicit_signed_int: (_) =>
      token(seq(choice("+", "-"), /[0-9][0-9_]*/)),

    // At least one digit, each one or the first after an optional '_'. A
    // class written `[?:...]` took '?' and ':' as digits, so `16#FF:` as a
    // CASE label swallowed its colon.
    numeric_type_name: ($) => choice($.int_type_name, $.real_type_name),

    int_type_name: ($) => choice($.sign_int_type_name, $.unsign_int_type_name),

    sign_int_type_name: ($) =>
      choice(
        alias(kw("SINT"), $.sint_name),
        alias(kw("INT"), $.int_name),
        alias(kw("DINT"), $.dint_name),
        alias(kw("LINT"), $.lint_name),
      ),

    bit_str_type_name: ($) =>
      choice(alias(kw("BOOL"), $.bool_name), $.multibits_type_name),

    subrange: ($) =>
      seq(
        field("lower", $.constant_expr),
        "..",
        field("upper", $.constant_expr),
      ),

    // Enum_Type_Decl : Enum_Type_Name ':' ( ( Elem_Type_Name ? Named_Spec_Init ) | Enum_Spec_Init );
    // Enum_Spec_Init : ( ( '(' Identifier ( ',' Identifier )* ')' ) | Enum_Type_Access ) ( ':=' Enum_Value )?;
    ...createSpecInit(
      "enum",
      ($) => $.enum_spec,
      ($) => seq(":=", $.namespace_access),
    ),

    //enum_spec: $ => seq('(', commaSep($.identifier), ')'),

    // Named_Spec_Init : '(' Enum_Value_Spec ( ',' Enum_Value_Spec )* ')' ( ':=' Enum_Value )?;
    ranges: ($) => commaSep1($.subrange),

    ...createSpecInit(
      "struct",
      ($) =>
        seq(
          kw("STRUCT"),
          optional(";"),
          field("overlap", optional(kw("OVERLAP"))),
          repeat(seq($.struct_elem_decl, optional(";"))),
          kw("END_STRUCT"),
        ),
      ($) => seq(":=", "(", commaSep($.init_elem), ")"),
    ),

    init_elem: ($) =>
      choice(
        $.struct_elem,
        $.struct_init,
        $.array_init,
        $.array_index_elem,
        $.ERR_func_call_in_init,
        $.constant_expr,
      ),

    array_index_elem: ($) =>
      seq(
        field("index", $.unsigned_int),
        "(",
        optional(field("values", $.array_values)),
        ")",
      ),

    // Placeholder for array values
    array_values: ($) => commaSep1($.init_elem),

    direct_variable: ($) =>
      seq(
        "%",
        // Parsed in the HIR
        field("adress", $.adress_identifier),
        field("offset", choice(alias("*", $.partly), $.offset)),
      ),

    offset: ($) => prec.right(dotSep1($.unsigned_int)),

    // Table 12 - Reference operations

    ...createSpecInit(
      "ref",
      ($) => seq(field("ref_count", repeat1(alias(kw("REF_TO"), $.ref_to))), choice($.data_type_access, $.array_type_spec)),
      ($) => seq(":=", $.ref_value),
    ),

    variable: ($) => choice($.begin_path_expression, $.direct_variable),

    // Var_Access : Variable_Name;
    var_access: ($) =>
      choice(
        $.ERR_unexpected_this_in_path,
        $.ERR_unexpected_super_in_path,
        alias($.identifier, $.field),
      ),

    // A section ends with an optional `;`, and a statement list may begin
    // with an empty statement: after `END_VAR ;` both readings fit, and
    // `prec.right` keeps the `;` with the section, as before. Every section
    // a body can follow is wrapped the same way, and so is USING.
    edge_decl: ($) =>
      seq(
        ":",
        field("type", $.data_type_access),
        field("edge", choice(kw("R_EDGE"), kw("F_EDGE"), $.ERR_invalid_edge_qualifier)),
      ),

    // : Variable_List ':' ( Simple_Spec_Init | Str_Var_Decl | Ref_Spec_Init )
    //| Array_Var_Decl_Init | Struct_Var_Decl_Init | FB_Decl_Init | Interface_Spec_Init;

    // INPUTS
    // OUTPUTS
    // VARS
    // RETAIN
    var_decl_init: ($) =>
      useSpecInit(
        ["simple", "subrange", "ref", "array", "struct"],
        [
          "simple",
          "array",
          "struct",
        ],
      )($),

    // ( Simple_Spec | Str_Var_Decl | Array_Var_Decl | Struct_Var_Decl )

    // INOUT
    // TEMP
    variable_list: ($) => commaSep1($.identifier),

    in_out_decls: ($) =>
      prec.right(
        seq(
          kw("VAR_IN_OUT"),
          repeat(
            seq(choice($.in_out_var, $.ERR_variable_with_no_spec), optional(";")),
          ),
          kw("END_VAR"),
          optional(";"),
        ),
      ),

    var_decls: ($) =>
      prec.right(
        seq(
          kw("VAR"),
          field("constant", optional(kw("CONSTANT"))),
          field("access", optional($.access_spec)),
          repeat(
            seq(
              choice(
                $.var_decl_init_list,
                $.loc_var_decl,
                $.ERR_variable_with_no_spec,
              ),
              optional(";"),
            ),
          ),
          kw("END_VAR"),
          optional(";"),
        ),
      ),

    var_decl_init_list: ($) =>
      seq(field("variables", $.variable_list), field("type", $.var_decl_init)),

    temp_var_decls: ($) =>
      prec.right(
        seq(
          kw("VAR_TEMP"),
          repeat(
            seq(choice($.temp_var, $.ERR_variable_with_no_spec), optional(";")),
          ),
          kw("END_VAR"),
          optional(";"),
        ),
      ),

    external_var_decls: ($) =>
      prec.right(
        seq(
          kw("VAR_EXTERNAL"),
          field("constant", optional(kw("CONSTANT"))),
          repeat(
            seq(
              choice($.external_decl, $.ERR_variable_with_no_spec),
              optional(";"),
            ),
          ),
          kw("END_VAR"),
          optional(";"),
        ),
      ),

    global_var_decls: ($) =>
      prec.right(
        seq(
          kw("VAR_GLOBAL"),
          field("constant_or_retain", optional(choice(kw("CONSTANT"), kw("RETAIN")))),
          repeat(seq($.global_var_decl, optional(";"))),
          kw("END_VAR"),
          optional(";"),
        ),
      ),

    // Global_Var_Decl : Global_Var_Spec ':' ( Loc_Var_Spec_Init | FB_Type_Access );
    loc_var_spec_init: ($) =>
      useSpecInit(
        ["simple", "array", "struct"],
        [
          "simple",
          "array",
          "struct",
        ],
      )($),

    located_at: ($) => seq(kw("AT"), $.direct_variable),

    func_decl: ($) =>
      seq(
        field("pragmas", repeat($.pou_pragma)),
        kw("FUNCTION"),
        field("spec", optional($.access_spec)),
        field("name", $.identifier),
        optional(seq(":", field("return_type", $.data_type_access))),
        field("directives", repeat($.using_directive)),
        field("variables", repeat($._func_variables)),
        field("body", optional($.func_body)),
        kw("END_FUNCTION"),
      ),

    _func_variables: ($) =>
      choice(...io_var_decls($), ...func_var_decls($),
        $.temp_var_decls,
        $.ERR_var_access_not_allowed,
        $.ERR_var_config_not_allowed,
        $.ERR_var_external_not_allowed,
        $.ERR_var_global_not_allowed
      ),

    func_body: ($) => choice($.ladder_diagram, $.fb_diagram, $.stmt_list),

    // Table 40 – Function block type declaration
    // Table 41 - Function block instance declaration

    fb_decl: ($) =>
      seq(
        field("pragmas", repeat($.pou_pragma)),
        kw("FUNCTION_BLOCK"),
        field("qualifier", optional(choice(kw("FINAL"), kw("ABSTRACT")))),
        field("name", $.identifier),
        optional($.ERR_implements_before_extends),
        optional(seq(kw("EXTENDS"), field("extends", $.namespace_access))),
        optional(repeat($.ERR_extends_multiple_times)),
        optional(seq(kw("IMPLEMENTS"), field("implements", $.interface_name_list))),
        optional(repeat($.ERR_implements_multiple_times)),
        field("directives", repeat($.using_directive)),
        field("variables", repeat($._fb_variables)),
        field("method", repeat($.method_decl)),
        optional($.ERR_fb_variables_after_method),
        field("body", optional($.fb_body)),
        kw("END_FUNCTION_BLOCK"),
      ),

    _fb_variables: ($) =>
      choice(
        $.fb_input_decls,
        $.fb_output_decls,
        $.in_out_decls,
        $.temp_var_decls,
        ...func_var_decls($),
        ...other_var_decls($),
        $.ERR_var_access_not_allowed,
        $.ERR_var_config_not_allowed,
        $.ERR_var_global_not_allowed,
      ),

    fb_input_decls: ($) =>
      prec.right(
        seq(
          kw("VAR_INPUT"),
          field("retain", optional(choice(kw("RETAIN"), kw("NON_RETAIN")))),
          repeat(
            seq(
              choice($.fb_input_var, $.ERR_variable_with_no_spec),
              optional(";"),
            ),
          ),
          kw("END_VAR"),
          optional(";"),
        ),
      ),

    fb_input_var: ($) =>
      seq(
        field("variables", $.variable_list),
        field("type", $._fb_input_var_kind),
      ),

    _fb_input_var_kind: ($) =>
      choice(
        $.var_decl_init,
        $.edge_decl,
        $.array_conformand,
        $.ERR_variadic_fb_input,
      ),

    fb_output_decls: ($) =>
      prec.right(
        seq(
          kw("VAR_OUTPUT"),
          field("retain", optional(choice(kw("RETAIN"), kw("NON_RETAIN")))),
          repeat(
            seq(
              choice($.fb_output_var, $.ERR_variable_with_no_spec),
              optional(";"),
            ),
          ),
          kw("END_VAR"),
          optional(";"),
        ),
      ),

    fb_body: ($) => choice($.SFC, $.ladder_diagram, $.fb_diagram, $.stmt_list),

    method_decl: ($) =>
      seq(
        field("pragmas", repeat($.pou_pragma)),
        kw("METHOD"),
        field("access", optional($.access_spec)),
        field("modifier", optional(choice(kw("FINAL"), kw("ABSTRACT")))),
        field("_override", optional(kw("OVERRIDE"))),
        field("name", $.identifier),
        optional(seq(":", field("return_type", $.data_type_access))),
        field(
          "variables",
          repeat(
            $._method_decl_variables
          ),
        ),
        field("body", optional($.func_body)),
        kw("END_METHOD"),
      ),

    _method_decl_variables: ($) =>
      choice(
        ...io_var_decls($),
        ...func_var_decls($),
        $.temp_var_decls,
        $.ERR_var_access_not_allowed,
        $.ERR_var_config_not_allowed,
        $.ERR_var_external_not_allowed,
        $.ERR_var_global_not_allowed,
      ),

    // Table 48 - Class
    // Table 50 Textual call of methods – Formal and non-formal parameter list

    class_decl: ($) =>
      seq(
        kw("CLASS"),
        field("modifier", optional(choice(kw("FINAL"), kw("ABSTRACT")))),
        field("name", $.identifier),
        field("directives", repeat($.using_directive)),
        optional($.ERR_implements_before_extends),
        optional(seq(kw("EXTENDS"), field("extends", $.namespace_access))),
        optional(repeat($.ERR_extends_multiple_times)),
        optional(seq(kw("IMPLEMENTS"), field("implements", $.interface_name_list))),
        optional(repeat($.ERR_implements_multiple_times)),
        field("variables", repeat($._class_variables)),
        field("methods", repeat($.method_decl)),
        optional($.ERR_class_variables_after_method),
        kw("END_CLASS"),
      ),

    _class_variables: ($) =>
      choice(...func_var_decls($), ...other_var_decls($),
        $.ERR_var_in_out_not_allowed,
        $.ERR_var_temp_not_allowed,
        $.ERR_var_access_not_allowed,
        $.ERR_var_config_not_allowed,
        $.ERR_var_external_not_allowed,
        $.ERR_var_global_not_allowed
      ),

    interface_decl: ($) =>
      seq(
        kw("INTERFACE"),
        field("name", $.identifier),
        field("directives", repeat($.using_directive)),
        optional(seq(kw("EXTENDS"), field("extends", $.interface_name_list))),
        optional(repeat($.ERR_extends_multiple_times)),
        field("prototype", repeat($.method_prototype)),
        kw("END_INTERFACE"),
      ),

    method_prototype: ($) =>
      seq(
        kw("METHOD"),
        optional($.ERR_access_spec_in_method_prototype),
        field("name", $.identifier),
        optional(seq(":", field("data_type", $.data_type_access))),
        field("variables", repeat($._method_prot_variables)),
        kw("END_METHOD"),
      ),

    _method_prot_variables: ($) =>
      choice(...io_var_decls($),
        $.ERR_var_access_not_allowed,
        $.ERR_var_config_not_allowed,
        $.ERR_var_external_not_allowed,
        $.ERR_var_global_not_allowed,
        // temp and in_out are not allowed too
        $.ERR_var_temp_not_allowed,
        $.ERR_var_in_out_not_allowed
      ),

    interface_name_list: ($) => commaSep1($.namespace_access),

    access_spec: ($) =>
      choice(
        alias(kw("PUBLIC"), $.public),
        alias(kw("PROTECTED"), $.protected),
        alias(kw("PRIVATE"), $.private),
        alias(kw("INTERNAL"), $.internal),
      ),

    // Table 47 - Program declaration

    prog_decl: ($) =>
      seq(
        field("pragmas", repeat($.pou_pragma)),
        kw("PROGRAM"),
        field("name", $.identifier),
        field(
          "declarations",
          repeat(
            choice(
              ...io_var_decls($),
              ...func_var_decls($),
              $.temp_var_decls,
              ...other_var_decls($),
              $.prog_access_decls,
              $.ERR_var_global_not_allowed,
            ),
          ),
        ),
        field("body", optional($.fb_body)),
        kw("END_PROGRAM"),
      ),

    prog_access_decls: ($) =>
      seq(
        kw("VAR_ACCESS"),
        repeat(seq($.prog_access_decl, optional(";"))),
        kw("END_VAR"),
      ),

    // Prog_Access_Decl : Access_Name ':' Symbolic_Variable Multibit_Part_Access ?
    // ':' Data_Type_Access Access_Direction ?;
    config_decl: ($) =>
      seq(
        kw("CONFIGURATION"),
        field("name", $.identifier),
        repeat(
          choice(
            field("global_variables", $._config_variables),
            field(
              "resources",
              choice($.resource_decl, $.ERR_task_or_program_outside_resource),
            ),
            field("access_decls", $.access_decls),
            field("config_init", $.config_init),
          ),
        ),
        kw("END_CONFIGURATION"),
      ),

    // VAR_CONFIG is NOT listed here: it is a legitimate section of the
    // CONFIGURATION body (see `config_decl`), not a misplaced variable block.
    single_resource_decl: ($) =>
      seq(choice($.task_config, $.prog_config), optional(";")),

    task_config: ($) =>
      seq(kw("TASK"), field("name", $.identifier), field("init", $.task_init)),

    constant_expr: ($) => $._expression,
