crates/tree-sitter/test/corpus/errors.txt
================================================================================
Implements before extends
================================================================================

FUNCTION_BLOCK fn IMPLEMENTS a EXTENDS b
    
END_FUNCTION_BLOCK

--------------------------------------------------------------------------------

(source_file
  (fb_decl
    (identifier)
    (ERR_implements_before_extends
      (interface_name_list
        (namespace_access
          (identifier))))
    (namespace_access
      (identifier))))

================================================================================
Implements multiple times
================================================================================

FUNCTION_BLOCK fn IMPLEMENTS a IMPLEMENTS b
    
END_FUNCTION_BLOCK

CLASS cl IMPLEMENTS a IMPLEMENTS b
    
END_CLASS

--------------------------------------------------------------------------------

(source_file
  (fb_decl
    (identifier)
    (interface_name_list
      (namespace_access
        (identifier)))
    (ERR_implements_multiple_times
      (interface_name_list
        (namespace_access
          (identifier)))))
  (class_decl
    (identifier)
    (interface_name_list
      (namespace_access
        (identifier)))
    (ERR_implements_multiple_times
      (interface_name_list
        (namespace_access
          (identifier))))))

================================================================================
Extends multiple times
================================================================================

FUNCTION_BLOCK fn EXTENDS a EXTENDS b
    
END_FUNCTION_BLOCK

INTERFACE in EXTENDS a EXTENDS b
    
END_INTERFACE

--------------------------------------------------------------------------------

(source_file
  (fb_decl
    (identifier)
    (namespace_access
      (identifier))
    (ERR_extends_multiple_times
      (namespace_access
        (identifier))))
  (interface_decl
    (identifier)
    (interface_name_list
      (namespace_access
        (identifier)))
    (ERR_extends_multiple_times
      (namespace_access
        (identifier)))))

================================================================================
Variable with no spec
================================================================================

FUNCTION_BLOCK fn
    VAR_INPUT
        empty
    END_VAR

    VAR
        empty
    END_VAR

    VAR_TEMP
        empty
    END_VAR

    VAR_IN_OUT
        empty
    END_VAR

    VAR_OUTPUT
        empty
    END_VAR
    
END_FUNCTION_BLOCK

--------------------------------------------------------------------------------

(source_file
  (fb_decl
    (identifier)
    (fb_input_decls
      (ERR_variable_with_no_spec
        (identifier)))
    (var_decls
      (ERR_variable_with_no_spec
        (identifier)))
    (temp_var_decls
      (ERR_variable_with_no_spec
        (identifier)))
    (in_out_decls
      (ERR_variable_with_no_spec
        (identifier)))
    (fb_output_decls
      (ERR_variable_with_no_spec
        (identifier)))))

================================================================================
VAR_CONFIG entry with no spec
================================================================================

CONFIGURATION Cfg
VAR_CONFIG
    Res.P1.k;
    Res.P1.x AT %QW0;
    Res.P1.y : INT := 1;
END_VAR
END_CONFIGURATION

--------------------------------------------------------------------------------

(source_file
  (config_decl
    (identifier)
    (config_init
      (ERR_config_entry_with_no_spec
        (path_expression
          (field_expression
            (path_expression
              (field_expression
                (path_expression
                  (var_access
                    (field)))
                (var_access
                  (field))))
            (var_access
              (field)))))
      (ERR_config_entry_with_no_spec
        (path_expression
          (field_expression
            (path_expression
              (field_expression
                (path_expression
                  (var_access
                    (field)))
                (var_access
                  (field))))
            (var_access
              (field))))
        (located_at
          (direct_variable
            (adress_identifier)
            (offset
              (unsigned_int)))))
      (config_inst_init
        (path_expression
          (field_expression
            (path_expression
              (field_expression
                (path_expression
                  (var_access
                    (field)))
                (var_access
                  (field))))
            (var_access
              (field))))
        (loc_var_spec_init
          (simple_type_spec
            (numeric_type_name
              (int_type_name
                (sign_int_type_name
                  (int_name)))))
          (simple_type_init
            (constant_expr
              (constant
                (numeric_literal
                  (int_literal
                    (signed_int
                      (unsigned_int))))))))))))

================================================================================
Invalid edge qualifier
================================================================================

FUNCTION_BLOCK fn
    VAR_INPUT
        in1: BOOL R_ED
        in2: BOOL F_ED
    END_VAR

    
END_FUNCTION_BLOCK

--------------------------------------------------------------------------------

(source_file
  (fb_decl
    (identifier)
    (fb_input_decls
      (fb_input_var
        (variable_list
          (identifier))
        (edge_decl
          (bit_str_type_name
            (bool_name))
          (ERR_invalid_edge_qualifier)))
      (fb_input_var
        (variable_list
          (identifier))
        (edge_decl
          (bit_str_type_name
            (bool_name))
          (ERR_invalid_edge_qualifier))))))

================================================================================
Function call as assignment
================================================================================

FUNCTION_BLOCK fn
    fn() := 0;   
END_FUNCTION_BLOCK

--------------------------------------------------------------------------------

(source_file
  (fb_decl
    (identifier)
    (fb_body
      (stmt_list
        (assign
          (ERR_assign_func_call
            (func_call
              (begin_path_expression
                (path_expression
                  (var_access
                    (field))))))
          (assignment
            (constant
              (numeric_literal
                (int_literal
                  (signed_int
                    (unsigned_int)))))))))))

================================================================================
Unexpected THIS in path
================================================================================

FUNCTION_BLOCK fn
    fn.THIS.p := 5
END_FUNCTION_BLOCK

--------------------------------------------------------------------------------

(source_file
  (fb_decl
    (identifier)
    (fb_body
      (stmt_list
        (assign
          (variable_access
            (variable
              (begin_path_expression
                (path_expression
                  (field_expression
                    (path_expression
                      (field_expression
                        (path_expression
                          (var_access
                            (field)))
                        (var_access
                          (ERR_unexpected_this_in_path))))
                    (var_access
                      (field)))))))
          (assignment
            (constant
              (numeric_literal
                (int_literal
                  (signed_int
                    (unsigned_int)))))))))))

================================================================================
Unexpected SUPER in path
================================================================================

FUNCTION_BLOCK fn
    fn.SUPER.p := 5
END_FUNCTION_BLOCK

--------------------------------------------------------------------------------

(source_file
  (fb_decl
    (identifier)
    (fb_body
      (stmt_list
        (assign
          (variable_access
            (variable
              (begin_path_expression
                (path_expression
                  (field_expression
                    (path_expression
                      (field_expression
                        (path_expression
                          (var_access
                            (field)))
                        (var_access
                          (ERR_unexpected_super_in_path))))
                    (var_access
                      (field)))))))
          (assignment
            (constant
              (numeric_literal
                (int_literal
                  (signed_int
                    (unsigned_int)))))))))))

================================================================================
Empty right hand assignment
================================================================================

FUNCTION_BLOCK fn
    a := 
END_FUNCTION_BLOCK

--------------------------------------------------------------------------------

(source_file
  (fb_decl
    (identifier)
    (fb_body
      (stmt_list
        (assign
          (variable_access
            (variable
              (begin_path_expression
                (path_expression
                  (var_access
                    (field))))))
          (ERR_empty_right_hand_assignment))))))

================================================================================
Function call in Init Expression
================================================================================

FUNCTION_BLOCK fn
  VAR
    ml : ARRAY [0..2] OF TON := [10(call(IN := 5, OUT => OUT))]
  END_VAR    
    
END_FUNCTION_BLOCK

--------------------------------------------------------------------------------

(source_file
  (fb_decl
    (identifier)
    (var_decls
      (var_decl_init_list
        (variable_list
          (identifier))
        (var_decl_init
          (array_type_spec
            (ranges
              (subrange
                (constant_expr
                  (constant
                    (numeric_literal
                      (int_literal
                        (signed_int
                          (unsigned_int))))))
                (constant_expr
                  (constant
                    (numeric_literal
                      (int_literal
                        (signed_int
                          (unsigned_int))))))))
            (simple_type_spec
              (namespace_access
                (identifier))))
          (array_type_init
            (init_elem
              (array_index_elem
                (unsigned_int)
                (array_values
                  (init_elem
                    (ERR_func_call_in_init
                      (func_call
                        (begin_path_expression
                          (path_expression
                            (var_access
                              (field))))
                        (param_assign
                          (param_assign_input
                            (identifier)
                            (constant
                              (numeric_literal
                                (int_literal
                                  (signed_int
                                    (unsigned_int)))))))
                        (param_assign
                          (param_assign_output
                            (identifier)
                            (variable_access
                              (variable
                                (begin_path_expression
                                  (path_expression
                                    (var_access
                                      (field))))))))))))))))))))

================================================================================
Missing dot in assignment sign
================================================================================

FUNCTION_BLOCK fn
    a = 0;
END_FUNCTION_BLOCK

--------------------------------------------------------------------------------

(source_file
  (fb_decl
    (identifier)
    (fb_body
      (stmt_list
        (assign
          (variable_access
            (variable
              (begin_path_expression
                (path_expression
                  (var_access
                    (field))))))
          (ERR_missing_dot_in_assignment
            (constant
              (numeric_literal
                (int_literal
                  (signed_int
                    (unsigned_int)))))))))))

================================================================================
Missing equal in assignment sign
================================================================================

FUNCTION_BLOCK fn
    a : 0;
END_FUNCTION_BLOCK

--------------------------------------------------------------------------------

(source_file
  (fb_decl
    (identifier)
    (fb_body
      (stmt_list
        (assign
          (variable_access
            (variable
              (begin_path_expression
                (path_expression
                  (var_access
                    (field))))))
          (ERR_missing_equal_in_assignment
            (constant
              (numeric_literal
                (int_literal
                  (signed_int
                    (unsigned_int)))))))))))

================================================================================
Missing dot in for list
================================================================================

FUNCTION fn
	FOR i = p TO smt END_FOR
END_FUNCTION

--------------------------------------------------------------------------------

(source_file
  (func_decl
    (identifier)
    (func_body
      (stmt_list
        (for_stmt
          (variable
            (begin_path_expression
              (path_expression
                (var_access
                  (field)))))
          (for_list
            (ERR_missing_dot_in_for_control)
            (variable_access
              (variable
                (begin_path_expression
                  (path_expression
                    (var_access
                      (field))))))
            (variable_access
              (variable
                (begin_path_expression
                  (path_expression
                    (var_access
                      (field))))))))))))

================================================================================
Missing dot in for list
================================================================================

FUNCTION fn
	FOR i : p TO smt END_FOR
END_FUNCTION

--------------------------------------------------------------------------------

(source_file
  (func_decl
    (identifier)
    (func_body
      (stmt_list
        (for_stmt
          (variable
            (begin_path_expression
              (path_expression
                (var_access
                  (field)))))
          (for_list
            (ERR_missing_equal_in_for_control)
            (variable_access
              (variable
                (begin_path_expression
                  (path_expression
                    (var_access
                      (field))))))
            (variable_access
              (variable
                (begin_path_expression
                  (path_expression
                    (var_access
                      (field))))))))))))

================================================================================
class variables after methods
================================================================================

CLASS base

    METHOD PROTECTED myProtectedMethod END_METHOD
        
    VAR
        obj: Base;
    END_VAR
    
    VAR
        obj: Base;
    END_VAR

END_CLASS

--------------------------------------------------------------------------------

(source_file
  (class_decl
    (identifier)
    (method_decl
      (access_spec
        (protected))
      (identifier))
    (ERR_class_variables_after_method
      (var_decls
        (var_decl_init_list
          (variable_list
            (identifier))
          (var_decl_init
            (simple_type_spec
              (namespace_access
                (identifier))))))
      (var_decls
        (var_decl_init_list
          (variable_list
            (identifier))
          (var_decl_init
            (simple_type_spec
              (namespace_access
                (identifier)))))))))

================================================================================
output assign in assignment
================================================================================

FUNCTION_BLOCK fn
    a => 0;
END_FUNCTION_BLOCK

--------------------------------------------------------------------------------

(source_file
  (fb_decl
    (identifier)
    (fb_body
      (stmt_list
        (assign
          (variable_access
            (variable
              (begin_path_expression
                (path_expression
                  (var_access
                    (field))))))
          (ERR_output_assign_in_assignment
            (constant
              (numeric_literal
                (int_literal
                  (signed_int
                    (unsigned_int)))))))))))

================================================================================
output_assign_in_for_list
================================================================================

FUNCTION fn
  VAR i : INT END_VAR
  FOR i => 0 TO 10 END_FOR
END_FUNCTION

--------------------------------------------------------------------------------

(source_file
  (func_decl
    (identifier)
    (var_decls
      (var_decl_init_list
        (variable_list
          (identifier))
        (var_decl_init
          (simple_type_spec
            (numeric_type_name
              (int_type_name
                (sign_int_type_name
                  (int_name))))))))
    (func_body
      (stmt_list
        (for_stmt
          (variable
            (begin_path_expression
              (path_expression
                (var_access
                  (field)))))
          (for_list
            (ERR_output_assign_in_for_control)
            (constant
              (numeric_literal
                (int_literal
                  (signed_int
                    (unsigned_int)))))
            (constant
              (numeric_literal
                (int_literal
                  (signed_int
                    (unsigned_int)))))))))))

================================================================================
program decl in namespace
================================================================================

NAMESPACE ns
  PROGRAM prgrm END_PROGRAM
END_NAMESPACE

--------------------------------------------------------------------------------

(source_file
  (namespace_decl
    (namespace_h_name
      (identifier))
    (namespace_elements
      (ERR_program_not_allowed_in_namespace
        (prog_decl
          (identifier))))))

================================================================================
config decl in namespace
================================================================================

NAMESPACE ns
  CONFIGURATION prgrm END_CONFIGURATION
END_NAMESPACE

--------------------------------------------------------------------------------

(source_file
  (namespace_decl
    (namespace_h_name
      (identifier))
    (namespace_elements
      (ERR_config_not_allowed_in_namespace
        (config_decl
          (identifier))))))

================================================================================
invalid var sections in class
================================================================================

CLASS cl
  VAR_IN_OUT

  END_VAR

  VAR_TEMP

  END_VAR

  VAR_ACCESS

  END_VAR

  VAR_CONFIG

  END_VAR


  VAR_EXTERNAL

  END_VAR

  VAR_GLOBAL

  END_VAR
END_CLASS

--------------------------------------------------------------------------------

(source_file
  (class_decl
    (identifier)
    (ERR_var_in_out_not_allowed
      (in_out_decls))
    (ERR_var_temp_not_allowed
      (temp_var_decls))
    (ERR_var_access_not_allowed
      (prog_access_decls))
    (ERR_var_config_not_allowed
      (config_init))
    (external_var_decls)
    (ERR_var_global_not_allowed
      (global_var_decls))))

================================================================================
invalid var sections in fbs
================================================================================

FUNCTION_BLOCK db
  VAR_ACCESS

  END_VAR

  VAR_CONFIG

  END_VAR


  VAR_GLOBAL

  END_VAR
END_FUNCTION_BLOCK

--------------------------------------------------------------------------------

(source_file
  (fb_decl
    (identifier)
    (ERR_var_access_not_allowed
      (prog_access_decls))
    (ERR_var_config_not_allowed
      (config_init))
    (ERR_var_global_not_allowed
      (global_var_decls))))

================================================================================
invalid var sections in fns
================================================================================

FUNCTION fn
  VAR_ACCESS

  END_VAR

  VAR_CONFIG

  END_VAR


  VAR_GLOBAL

  END_VAR
END_FUNCTION

--------------------------------------------------------------------------------

(source_file
  (func_decl
    (identifier)
    (ERR_var_access_not_allowed
      (prog_access_decls))
    (ERR_var_config_not_allowed
      (config_init))
    (ERR_var_global_not_allowed
      (global_var_decls))))

================================================================================
invalid var sections in method prototypes
================================================================================

INTERFACE in
  METHOD m
    VAR_ACCESS
    
    END_VAR

    VAR_CONFIG

    END_VAR


    VAR_EXTERNAL

    END_VAR

    VAR_GLOBAL

    END_VAR
    
    VAR_TEMP

    END_VAR

    VAR_IN_OUT

    END_VAR
  END_METHOD
END_INTERFACE

--------------------------------------------------------------------------------

(source_file
  (interface_decl
    (identifier)
    (method_prototype
      (identifier)
      (ERR_var_access_not_allowed
        (prog_access_decls))
      (ERR_var_config_not_allowed
        (config_init))
      (ERR_var_external_not_allowed
        (external_var_decls))
      (ERR_var_global_not_allowed
        (global_var_decls))
      (ERR_var_temp_not_allowed
        (temp_var_decls))
      (in_out_decls))))

================================================================================
invalid var sections in method declarations
================================================================================

CLASS cl

  METHOD m
    VAR_ACCESS
    
    END_VAR

    VAR_CONFIG

    END_VAR


    VAR_EXTERNAL

    END_VAR

    VAR_GLOBAL

    END_VAR

    VAR_TEMP

    END_VAR

    VAR_IN_OUT

    END_VAR
  END_METHOD
END_CLASS

--------------------------------------------------------------------------------

(source_file
  (class_decl
    (identifier)
    (method_decl
      (identifier)
      (ERR_var_access_not_allowed
        (prog_access_decls))
      (ERR_var_config_not_allowed
        (config_init))
      (external_var_decls)
      (ERR_var_global_not_allowed
        (global_var_decls))
      (temp_var_decls)
      (in_out_decls))))

================================================================================
invalid var sections in configuration declaration
================================================================================

CONFIGURATION MyCfg
  VAR

  END_VAR

  VAR_IN_OUT

  END_VAR

  VAR_TEMP

  END_VAR


  VAR_EXTERNAL

  END_VAR
END_CONFIGURATION

--------------------------------------------------------------------------------

(source_file
  (config_decl
    (identifier)
    (ERR_var_not_allowed
      (var_decls))
    (ERR_var_in_out_not_allowed
      (in_out_decls))
    (ERR_var_temp_not_allowed
      (temp_var_decls))
    (ERR_var_external_not_allowed
      (external_var_decls))))

================================================================================
method decl in body
================================================================================

FUNCTION_BLOCK fb1
    x := 1;
    METHOD m1
    END_METHOD
END_FUNCTION_BLOCK

--------------------------------------------------------------------------------

(source_file
  (fb_decl
    (identifier)
    (fb_body
      (stmt_list
        (assign
          (variable_access
            (variable
              (begin_path_expression
                (path_expression
                  (var_access
                    (field))))))
          (assignment
            (constant
              (numeric_literal
                (int_literal
                  (signed_int
                    (unsigned_int)))))))
        (ERR_method_decl_in_body
          (method_decl
            (identifier)))))))

================================================================================
single after interval
================================================================================

CONFIGURATION MyCfg
    TASK t1(INTERVAL := 1, SINGLE := 1, PRIORITY := 1);
END_CONFIGURATION

--------------------------------------------------------------------------------

(source_file
  (config_decl
    (identifier)
    (ERR_task_or_program_outside_resource
      (single_resource_decl
        (task_config
          (identifier)
          (task_init
            (data_source
              (constant
                (numeric_literal
                  (int_literal
                    (signed_int
                      (unsigned_int))))))
            (ERR_single_after_interval
              (data_source
                (constant
                  (numeric_literal
                    (int_literal
                      (signed_int
                        (unsigned_int)))))))
            (unsigned_int)))))))

================================================================================
interval after priority
================================================================================

CONFIGURATION MyCfg
    TASK t1(PRIORITY := 1, INTERVAL := 1);
END_CONFIGURATION
